recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:3: error: not found: value length
    val y:Int=length(list)
              ^