recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
  def valEnleve(list:List[Int],x:Int):Int={
    val y:Int=length(list)
    return y-x
  }
  if(n==0){
    return Nil
  }
  else{
    return l.head::nlast(l.tail,valEnleve(l,n))
  }
}